fixed warning when trying to disable collisions.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -27,8 +27,6 @@ MultipleInstancePositions=(X=315,Y=163)
 MultipleInstancePositions=(X=0,Y=0)
 MultipleInstancePositions=(X=672,Y=0)
 MultipleInstancePositions=(X=0,Y=512)
-LastExecutedPlayModeType=PlayMode_InEditorFloating
-PlayNumberOfClients=2
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 SnapToSurface=(bEnabled=False,SnapOffsetExtent=0.000000,bSnapRotation=True)
@@ -50,7 +48,7 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.25-17.49.47
+CoopGame.TimeStamp=2020.04.25-18.43.20
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -3374,7 +3372,7 @@ STrackerBot="\"Object.Components.meshComp.Object.Lighting.LightmassSettings\" \"
 REINST_BP_TrackerBot_C_56="\"Object.Components.meshComp.Object.Lighting.LightmassSettings\" \"Object.Components.meshComp.Object.Lighting.LightingChannels\" \"Object.Components.meshComp.Object.Collision.BodyInstance\" "
 MaterialExpressionVectorParameter="\"Object.DefaultValue\" "
 MaterialExpressionParameter="\"Object.DefaultValue\" "
-MaterialExpression=
+MaterialExpression="\"Object.DefaultValue\" "
 REINST_BP_TrackerBot_C_53="\"Object.Components.meshComp.Object.Lighting.LightmassSettings\" \"Object.Components.meshComp.Object.Lighting.LightingChannels\" \"Object.Components.meshComp.Object.Collision.BodyInstance\" "
 REINST_BP_TrackerBot_C_35="\"Object.Components.meshComp.Object.Lighting.LightmassSettings\" \"Object.Components.meshComp.Object.Lighting.LightingChannels\" \"Object.Components.meshComp.Object.Collision.BodyInstance\" "
 MaterialExpressionScalarParameter="\"Object.DefaultValue\" "
@@ -3397,26 +3395,26 @@ RecentlyPlaced=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail.P_SmokeTrail;
 RecentlyPlaced=/Game/Blueprints/BP_TargetDummy.BP_TargetDummy;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/TrackerBot/SM_TrackerBot
-MRUItem1=/Game/TrackerBot/Sounds/ball_roll_04_loop_Cue
-MRUItem2=/Game/TrackerBot/BP_TrackerBot
-MRUItem3=/Game/TrackerBot/Sounds/Explosion01_Cue
-MRUItem4=/Game/TrackerBot/Sounds/explodewarning_Cue
-MRUItem5=/Game/TrackerBot/Sounds/TrackerBotAttenuation
-MRUItem6=/Game/Blueprints/Characters/BP_PlayerPawn
-MRUItem7=/Game/Blueprints/Projectiles/BP_GrenadeProjectile
-MRUItem8=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
-MRUItem9=/Game/Blueprints/Weapons/BP_Rifle
-MRUItem10=/Game/Blueprints/AI/BP_TrackerBot
-MRUItem11=/Game/Meshes/AI/TrackerBot/M_TrackerBot
-MRUItem12=/Engine/EngineMaterials/T_Default_Material_Grid_M
-MRUItem13=/Game/Meshes/SM_TrackerBot
-MRUItem14=/Game/Meshes/ArcadeEditorSphereScaled
-MRUItem15=/Game/UI/WBP_HealthIndicator
-MRUItem16=/Game/UI/WBP_AmmoInfo
-MRUItem17=/Game/Blueprints/Weapons/BP_Shotgun
-MRUItem18=/Game/Blueprints/GameModes/BP_TestGameMode
-MRUItem19=/Game/UI/WBP_SimpleCrosshair
+MRUItem0=/Game/TrackerBot/M_TrackerBot
+MRUItem1=/Game/TrackerBot/M_TrackerBot2
+MRUItem2=/Game/TrackerBot/SM_TrackerBot
+MRUItem3=/Game/TrackerBot/Sounds/ball_roll_04_loop_Cue
+MRUItem4=/Game/TrackerBot/BP_TrackerBot
+MRUItem5=/Game/TrackerBot/Sounds/Explosion01_Cue
+MRUItem6=/Game/TrackerBot/Sounds/explodewarning_Cue
+MRUItem7=/Game/TrackerBot/Sounds/TrackerBotAttenuation
+MRUItem8=/Game/Blueprints/Characters/BP_PlayerPawn
+MRUItem9=/Game/Blueprints/Projectiles/BP_GrenadeProjectile
+MRUItem10=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
+MRUItem11=/Game/Blueprints/Weapons/BP_Rifle
+MRUItem12=/Game/Blueprints/AI/BP_TrackerBot
+MRUItem13=/Game/Meshes/AI/TrackerBot/M_TrackerBot
+MRUItem14=/Engine/EngineMaterials/T_Default_Material_Grid_M
+MRUItem15=/Game/Meshes/SM_TrackerBot
+MRUItem16=/Game/Meshes/ArcadeEditorSphereScaled
+MRUItem17=/Game/UI/WBP_HealthIndicator
+MRUItem18=/Game/UI/WBP_AmmoInfo
+MRUItem19=/Game/Blueprints/Weapons/BP_Shotgun
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
@@ -3512,7 +3510,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [MessageLog]
-LastLogListing=EditorErrors
+LastLogListing=PIE
 
 [/Script/UnrealEd.CascadeOptions]
 ModuleColor_Beam_Unselected=(B=235,G=150,R=160,A=0)
