Tracker bot now deals swarm damage.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -48,7 +48,7 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.25-23.03.29
+CoopGame.TimeStamp=2020.04.26-15.24.13
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -3125,6 +3125,53 @@ AudioComponent.ComponentReplication=True
 AudioComponent.Activation=True
 AudioComponent.Cooking=True
 AudioComponent.Events=True
+BP_TrackerBot_C.Swarm=True
+REINST_BP_TrackerBot_C_37.Variable=True
+REINST_BP_TrackerBot_C_37.TransformCommon=True
+REINST_BP_TrackerBot_C_37.Sockets=True
+REINST_BP_TrackerBot_C_37.Shape=True
+REINST_BP_TrackerBot_C_37.Navigation=True
+REINST_BP_TrackerBot_C_37.Rendering=True
+REINST_BP_TrackerBot_C_37.Physics=True
+REINST_BP_TrackerBot_C_37.Collision=True
+REINST_BP_TrackerBot_C_37.Tags=True
+REINST_BP_TrackerBot_C_37.ComponentReplication=True
+REINST_BP_TrackerBot_C_37.Cooking=True
+REINST_BP_TrackerBot_C_37.Events=True
+REINST_BP_TrackerBot_C_37.Overlapping=True
+REINST_BP_TrackerBot_C_37.Tick=True
+REINST_BP_TrackerBot_C_37.Tracking=True
+REINST_BP_TrackerBot_C_37.Destruction=True
+REINST_BP_TrackerBot_C_37.Swarm=True
+REINST_BP_TrackerBot_C_37.Pawn=True
+REINST_BP_TrackerBot_C_37.Camera=True
+REINST_BP_TrackerBot_C_37.Replication=True
+REINST_BP_TrackerBot_C_37.Input=True
+REINST_BP_TrackerBot_C_37.Actor=True
+REINST_BP_TrackerBot_C_41.Variable=True
+REINST_BP_TrackerBot_C_41.TransformCommon=True
+REINST_BP_TrackerBot_C_41.Sockets=True
+REINST_BP_TrackerBot_C_41.Shape=True
+REINST_BP_TrackerBot_C_41.Navigation=True
+REINST_BP_TrackerBot_C_41.Rendering=True
+REINST_BP_TrackerBot_C_41.Physics=True
+REINST_BP_TrackerBot_C_41.Collision=True
+REINST_BP_TrackerBot_C_41.Tags=True
+REINST_BP_TrackerBot_C_41.ComponentReplication=True
+REINST_BP_TrackerBot_C_41.Cooking=True
+REINST_BP_TrackerBot_C_41.Events=True
+REINST_BP_TrackerBot_C_45.Variable=True
+REINST_BP_TrackerBot_C_45.TransformCommon=True
+REINST_BP_TrackerBot_C_45.Sockets=True
+REINST_BP_TrackerBot_C_45.Shape=True
+REINST_BP_TrackerBot_C_45.Navigation=True
+REINST_BP_TrackerBot_C_45.Rendering=True
+REINST_BP_TrackerBot_C_45.Physics=True
+REINST_BP_TrackerBot_C_45.Collision=True
+REINST_BP_TrackerBot_C_45.Tags=True
+REINST_BP_TrackerBot_C_45.ComponentReplication=True
+REINST_BP_TrackerBot_C_45.Cooking=True
+REINST_BP_TrackerBot_C_45.Events=True
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -3295,7 +3342,7 @@ BP_ExplosiveBarrel_C=BP_ExplosiveBarrel_C.Collision.Collision,
 CapsuleComponent=CapsuleComponent.Collision.Collision,
 SphereComponent=SphereComponent.Collision.Collision,
 StaticMesh=StaticMesh.LOD0.MeshBuildSettings,
-BP_TrackerBot_C=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,BP_TrackerBot_C.Physics.ConstraintsGroup,BP_TrackerBot_C.Rendering.TextureStreaming,BP_TrackerBot_C.Rendering.LOD,
+BP_TrackerBot_C=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,BP_TrackerBot_C.Physics.ConstraintsGroup,BP_TrackerBot_C.Rendering.TextureStreaming,BP_TrackerBot_C.Rendering.LOD,BP_TrackerBot_C.Collision.Collision,
 NavigationPath=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,
 
 [DetailPropertyExpansion]
@@ -3304,7 +3351,7 @@ Object=
 BP_PlayerPawn_C="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SCharacter="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 Character="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-Pawn="\"Object.Components.meshComp.Object.Lighting.LightmassSettings\" \"Object.Components.meshComp.Object.Lighting.LightingChannels\" \"Object.Components.meshComp.Object.Collision.BodyInstance\" "
+Pawn=
 REINST_BP_PlayerPawn_C_34="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
@@ -3318,9 +3365,9 @@ DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 SkeletalMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
 SkinnedMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
 MeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
-PrimitiveComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
-SceneComponent=
-ActorComponent=
+PrimitiveComponent="\"Object.Collision.BodyInstance\" "
+SceneComponent="\"Object.Collision.BodyInstance\" "
+ActorComponent="\"Object.Collision.BodyInstance\" "
 ParticleModuleColorOverLife="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
 ParticleModuleColorBase="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
 ParticleModule="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
@@ -3367,8 +3414,8 @@ REINST_BP_PlayerPawn_C_43="\"Object.Character.Mesh.Object.Collision.BodyInstance
 REINST_BP_PlayerPawn_C_48="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 REINST_BP_ExplosiveBarrel_C_35=
 NavMeshBoundsVolume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-BP_TrackerBot_C="\"Object.Components.meshComp.Object.Lighting.LightmassSettings\" \"Object.Components.meshComp.Object.Lighting.LightingChannels\" \"Object.Components.meshComp.Object.Collision.BodyInstance\" "
-STrackerBot="\"Object.Components.meshComp.Object.Lighting.LightmassSettings\" \"Object.Components.meshComp.Object.Lighting.LightingChannels\" \"Object.Components.meshComp.Object.Collision.BodyInstance\" "
+BP_TrackerBot_C=
+STrackerBot=
 REINST_BP_TrackerBot_C_56="\"Object.Components.meshComp.Object.Lighting.LightmassSettings\" \"Object.Components.meshComp.Object.Lighting.LightingChannels\" \"Object.Components.meshComp.Object.Collision.BodyInstance\" "
 MaterialExpressionVectorParameter="\"Object.DefaultValue\" "
 MaterialExpressionParameter="\"Object.DefaultValue\" "
@@ -3395,11 +3442,11 @@ RecentlyPlaced=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail.P_SmokeTrail;
 RecentlyPlaced=/Game/Blueprints/BP_TargetDummy.BP_TargetDummy;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/TrackerBot/M_TrackerBot
-MRUItem1=/Game/TrackerBot/M_TrackerBot2
-MRUItem2=/Game/TrackerBot/SM_TrackerBot
-MRUItem3=/Game/TrackerBot/Sounds/ball_roll_04_loop_Cue
-MRUItem4=/Game/TrackerBot/BP_TrackerBot
+MRUItem0=/Game/TrackerBot/BP_TrackerBot
+MRUItem1=/Game/TrackerBot/M_TrackerBot
+MRUItem2=/Game/TrackerBot/M_TrackerBot2
+MRUItem3=/Game/TrackerBot/SM_TrackerBot
+MRUItem4=/Game/TrackerBot/Sounds/ball_roll_04_loop_Cue
 MRUItem5=/Game/TrackerBot/Sounds/Explosion01_Cue
 MRUItem6=/Game/TrackerBot/Sounds/explodewarning_Cue
 MRUItem7=/Game/TrackerBot/Sounds/TrackerBotAttenuation
