Swarm damage increase challenge completed.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -49,7 +49,7 @@ LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
 CoopGame.TimeStamp=2020.04.26-15.58.30
-CoopGame.LastCompileMethod=External
+CoopGame.LastCompileMethod=Runtime
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
 RSA.TimeStamp=2019.12.20-23.26.56
@@ -3172,6 +3172,8 @@ REINST_BP_TrackerBot_C_45.Tags=True
 REINST_BP_TrackerBot_C_45.ComponentReplication=True
 REINST_BP_TrackerBot_C_45.Cooking=True
 REINST_BP_TrackerBot_C_45.Events=True
+MaterialExpressionAdd.MaterialExpressionAdd=True
+MaterialExpressionAdd.MaterialExpression=True
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -3516,6 +3518,8 @@ MRUItem19=/Game/Blueprints/Weapons/BP_Shotgun
 /Game/TrackerBot/Sounds/Explosion01_Cue.Explosion01_Cue=0
 /Game/TrackerBot/Sounds/explodewarning_Cue.explodewarning_Cue=0
 /Game/TrackerBot/SM_TrackerBot.SM_TrackerBot=0
+/Game/TrackerBot/M_TrackerBot2.M_TrackerBot2=0
+/Game/TrackerBot/M_TrackerBot.M_TrackerBot=0
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
@@ -3557,7 +3561,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [MessageLog]
-LastLogListing=EditorErrors
+LastLogListing=PIE
 
 [/Script/UnrealEd.CascadeOptions]
 ModuleColor_Beam_Unselected=(B=235,G=150,R=160,A=0)
