created pickup class and fixed the use of notify actor begin overlap in the tracker bot.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -48,8 +48,8 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.26-15.58.30
-CoopGame.LastCompileMethod=Runtime
+CoopGame.TimeStamp=2020.04.26-19.43.15
+CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
 RSA.TimeStamp=2019.12.20-23.26.56
@@ -3176,7 +3176,7 @@ MaterialExpressionAdd.MaterialExpressionAdd=True
 MaterialExpressionAdd.MaterialExpression=True
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [RootWindow]
