adjusted sphere and decal sizes.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -12,7 +12,7 @@ SwarmIntermediateFolder=C:/unreal projects/TomLooman/UE4_MasteryCourse_CoopGame/
 bShowCompilerLogOnCompileError=False
 DataSourceFolder=(Path="")
 bAnimationReimportWarnings=False
-bSCSEditorShowFloor=False
+bSCSEditorShowFloor=True
 SCSViewportCameraSpeed=3
 AssetViewerProfileName=
 MaterialQualityLevel=1
@@ -48,7 +48,7 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.26-19.43.15
+CoopGame.TimeStamp=2020.04.26-20.20.57
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -3174,6 +3174,13 @@ REINST_BP_TrackerBot_C_45.Cooking=True
 REINST_BP_TrackerBot_C_45.Events=True
 MaterialExpressionAdd.MaterialExpressionAdd=True
 MaterialExpressionAdd.MaterialExpression=True
+BP_TestPickup_C.Tick=True
+BP_TestPickup_C.Rendering=True
+BP_TestPickup_C.Replication=True
+BP_TestPickup_C.Input=True
+BP_TestPickup_C.Actor=True
+BP_TestPickup_C.Components=True
+REINST_BP_TestPickup_C_38.Components=True
 
 [AssetEditorManager]
 CleanShutdown=False
@@ -3444,26 +3451,26 @@ RecentlyPlaced=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail.P_SmokeTrail;
 RecentlyPlaced=/Game/Blueprints/BP_TargetDummy.BP_TargetDummy;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/TrackerBot/M_TrackerBot2
-MRUItem1=/Game/TrackerBot/M_TrackerBot
-MRUItem2=/Game/TrackerBot/BP_TrackerBot
-MRUItem3=/Game/TrackerBot/SM_TrackerBot
-MRUItem4=/Game/TrackerBot/Sounds/ball_roll_04_loop_Cue
-MRUItem5=/Game/TrackerBot/Sounds/Explosion01_Cue
-MRUItem6=/Game/TrackerBot/Sounds/explodewarning_Cue
-MRUItem7=/Game/TrackerBot/Sounds/TrackerBotAttenuation
-MRUItem8=/Game/Blueprints/Characters/BP_PlayerPawn
-MRUItem9=/Game/Blueprints/Projectiles/BP_GrenadeProjectile
-MRUItem10=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
-MRUItem11=/Game/Blueprints/Weapons/BP_Rifle
-MRUItem12=/Game/Blueprints/AI/BP_TrackerBot
-MRUItem13=/Game/Meshes/AI/TrackerBot/M_TrackerBot
-MRUItem14=/Engine/EngineMaterials/T_Default_Material_Grid_M
-MRUItem15=/Game/Meshes/SM_TrackerBot
-MRUItem16=/Game/Meshes/ArcadeEditorSphereScaled
-MRUItem17=/Game/UI/WBP_HealthIndicator
-MRUItem18=/Game/UI/WBP_AmmoInfo
-MRUItem19=/Game/Blueprints/Weapons/BP_Shotgun
+MRUItem0=/Game/Powerups/Pickup/BP_TestPickup
+MRUItem1=/Game/TrackerBot/M_TrackerBot2
+MRUItem2=/Game/TrackerBot/M_TrackerBot
+MRUItem3=/Game/TrackerBot/BP_TrackerBot
+MRUItem4=/Game/TrackerBot/SM_TrackerBot
+MRUItem5=/Game/TrackerBot/Sounds/ball_roll_04_loop_Cue
+MRUItem6=/Game/TrackerBot/Sounds/Explosion01_Cue
+MRUItem7=/Game/TrackerBot/Sounds/explodewarning_Cue
+MRUItem8=/Game/TrackerBot/Sounds/TrackerBotAttenuation
+MRUItem9=/Game/Blueprints/Characters/BP_PlayerPawn
+MRUItem10=/Game/Blueprints/Projectiles/BP_GrenadeProjectile
+MRUItem11=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
+MRUItem12=/Game/Blueprints/Weapons/BP_Rifle
+MRUItem13=/Game/Blueprints/AI/BP_TrackerBot
+MRUItem14=/Game/Meshes/AI/TrackerBot/M_TrackerBot
+MRUItem15=/Engine/EngineMaterials/T_Default_Material_Grid_M
+MRUItem16=/Game/Meshes/SM_TrackerBot
+MRUItem17=/Game/Meshes/ArcadeEditorSphereScaled
+MRUItem18=/Game/UI/WBP_HealthIndicator
+MRUItem19=/Game/UI/WBP_AmmoInfo
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
@@ -3718,5 +3725,6 @@ PrimType=1
 
 [SelectionDetails]
 PreserveScaleRatio=True
+DecalSize_PreserveScaleRatio=False
 
 
