Created the PowerUp class.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -48,7 +48,7 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.26-20.20.57
+CoopGame.TimeStamp=2020.04.26-20.33.29
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -3181,6 +3181,7 @@ BP_TestPickup_C.Input=True
 BP_TestPickup_C.Actor=True
 BP_TestPickup_C.Components=True
 REINST_BP_TestPickup_C_38.Components=True
+BP_TestPickup_C.TransformCommon=True
 
 [AssetEditorManager]
 CleanShutdown=False
@@ -3435,6 +3436,7 @@ MaterialExpressionScalarParameter="\"Object.DefaultValue\" "
 REINST_BP_ExplosiveBarrel_C_47="\"Object.Components.mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Powerups/Pickup/BP_TestPickup.BP_TestPickup;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
 RecentlyPlaced=/Game/Blueprints/AI/BP_TrackerBot.BP_TrackerBot;
