Pickup actor is now able to spawn a powerup. Created a pickup blueprint, imported materials and effects for pickups.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -18,7 +18,6 @@ AssetViewerProfileName=
 MaterialQualityLevel=1
 PreviewShaderPlatformName=None
 bIsMaterialQualityOverridePlatform=False
-bAllowSelectTranslucent=False
 
 [/Script/UnrealEd.LevelEditorPlaySettings]
 MultipleInstanceLastHeight=400
@@ -48,7 +47,7 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.26-20.33.29
+CoopGame.TimeStamp=2020.04.27-14.15.15
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -3182,9 +3181,16 @@ BP_TestPickup_C.Actor=True
 BP_TestPickup_C.Components=True
 REINST_BP_TestPickup_C_38.Components=True
 BP_TestPickup_C.TransformCommon=True
+REINST_BP_TestPickup_C_37.Components=True
+BP_SuperSpeedPowerup_C.Tick=True
+BP_SuperSpeedPowerup_C.Powerup=True
+BP_SuperSpeedPowerup_C.Rendering=True
+BP_SuperSpeedPowerup_C.Replication=True
+BP_SuperSpeedPowerup_C.Input=True
+BP_SuperSpeedPowerup_C.Actor=True
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [RootWindow]
@@ -3218,7 +3224,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/TrackerBot
+ContentBrowserTab1.SelectedPaths=/Game/Powerups
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -3354,6 +3360,7 @@ SphereComponent=SphereComponent.Collision.Collision,
 StaticMesh=StaticMesh.LOD0.MeshBuildSettings,
 BP_TrackerBot_C=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,BP_TrackerBot_C.Physics.ConstraintsGroup,BP_TrackerBot_C.Rendering.TextureStreaming,BP_TrackerBot_C.Rendering.LOD,BP_TrackerBot_C.Collision.Collision,
 NavigationPath=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,
+CharacterMovementComponent=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[3]\" "
@@ -3376,8 +3383,8 @@ SkeletalMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.B
 SkinnedMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
 MeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance\" "
-SceneComponent="\"Object.Collision.BodyInstance\" "
-ActorComponent="\"Object.Collision.BodyInstance\" "
+SceneComponent=
+ActorComponent=
 ParticleModuleColorOverLife="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
 ParticleModuleColorBase="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
 ParticleModule="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
@@ -3429,11 +3436,14 @@ STrackerBot=
 REINST_BP_TrackerBot_C_56="\"Object.Components.meshComp.Object.Lighting.LightmassSettings\" \"Object.Components.meshComp.Object.Lighting.LightingChannels\" \"Object.Components.meshComp.Object.Collision.BodyInstance\" "
 MaterialExpressionVectorParameter="\"Object.DefaultValue\" "
 MaterialExpressionParameter="\"Object.DefaultValue\" "
-MaterialExpression="\"Object.DefaultValue\" "
+MaterialExpression=
 REINST_BP_TrackerBot_C_53="\"Object.Components.meshComp.Object.Lighting.LightmassSettings\" \"Object.Components.meshComp.Object.Lighting.LightingChannels\" \"Object.Components.meshComp.Object.Collision.BodyInstance\" "
 REINST_BP_TrackerBot_C_35="\"Object.Components.meshComp.Object.Lighting.LightmassSettings\" \"Object.Components.meshComp.Object.Lighting.LightingChannels\" \"Object.Components.meshComp.Object.Collision.BodyInstance\" "
 MaterialExpressionScalarParameter="\"Object.DefaultValue\" "
 REINST_BP_ExplosiveBarrel_C_47="\"Object.Components.mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+BP_TestPickup_C="\"Object.Components.overlapSphere\" \"Object.Components.overlapSphere.Object.Shape\" \"Object.Components.overlapSphere.Object.Shape.ShapeColor\" \"Object.Components.overlapSphere.Object.Collision\" \"Object.Components.decalComp\" \"Object.Components.decalComp.Object.Decal\" "
+SPickupActor="\"Object.Components.overlapSphere\" \"Object.Components.overlapSphere.Object.Shape\" \"Object.Components.overlapSphere.Object.Shape.ShapeColor\" \"Object.Components.overlapSphere.Object.Collision\" \"Object.Components.decalComp\" \"Object.Components.decalComp.Object.Decal\" "
+REINST_BP_TestPickup_C_37="\"Object.Components.decalComp\" \"Object.Components.decalComp.Object.Decal\" "
 
 [PlacementMode]
 RecentlyPlaced=/Game/Powerups/Pickup/BP_TestPickup.BP_TestPickup;
@@ -3453,26 +3463,26 @@ RecentlyPlaced=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail.P_SmokeTrail;
 RecentlyPlaced=/Game/Blueprints/BP_TargetDummy.BP_TargetDummy;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Powerups/Pickup/BP_TestPickup
-MRUItem1=/Game/TrackerBot/M_TrackerBot2
-MRUItem2=/Game/TrackerBot/M_TrackerBot
-MRUItem3=/Game/TrackerBot/BP_TrackerBot
-MRUItem4=/Game/TrackerBot/SM_TrackerBot
-MRUItem5=/Game/TrackerBot/Sounds/ball_roll_04_loop_Cue
-MRUItem6=/Game/TrackerBot/Sounds/Explosion01_Cue
-MRUItem7=/Game/TrackerBot/Sounds/explodewarning_Cue
-MRUItem8=/Game/TrackerBot/Sounds/TrackerBotAttenuation
-MRUItem9=/Game/Blueprints/Characters/BP_PlayerPawn
-MRUItem10=/Game/Blueprints/Projectiles/BP_GrenadeProjectile
-MRUItem11=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
-MRUItem12=/Game/Blueprints/Weapons/BP_Rifle
-MRUItem13=/Game/Blueprints/AI/BP_TrackerBot
-MRUItem14=/Game/Meshes/AI/TrackerBot/M_TrackerBot
-MRUItem15=/Engine/EngineMaterials/T_Default_Material_Grid_M
-MRUItem16=/Game/Meshes/SM_TrackerBot
-MRUItem17=/Game/Meshes/ArcadeEditorSphereScaled
-MRUItem18=/Game/UI/WBP_HealthIndicator
-MRUItem19=/Game/UI/WBP_AmmoInfo
+MRUItem0=/Game/Powerups/BP_SuperSpeedPowerup
+MRUItem1=/Game/Powerups/Pickup/BP_TestPickup
+MRUItem2=/Game/Powerups/M_PowerupDecal
+MRUItem3=/Game/TrackerBot/M_TrackerBot2
+MRUItem4=/Game/TrackerBot/M_TrackerBot
+MRUItem5=/Game/TrackerBot/BP_TrackerBot
+MRUItem6=/Game/TrackerBot/SM_TrackerBot
+MRUItem7=/Game/TrackerBot/Sounds/ball_roll_04_loop_Cue
+MRUItem8=/Game/TrackerBot/Sounds/Explosion01_Cue
+MRUItem9=/Game/TrackerBot/Sounds/explodewarning_Cue
+MRUItem10=/Game/TrackerBot/Sounds/TrackerBotAttenuation
+MRUItem11=/Game/Blueprints/Characters/BP_PlayerPawn
+MRUItem12=/Game/Blueprints/Projectiles/BP_GrenadeProjectile
+MRUItem13=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
+MRUItem14=/Game/Blueprints/Weapons/BP_Rifle
+MRUItem15=/Game/Blueprints/AI/BP_TrackerBot
+MRUItem16=/Game/Meshes/AI/TrackerBot/M_TrackerBot
+MRUItem17=/Engine/EngineMaterials/T_Default_Material_Grid_M
+MRUItem18=/Game/Meshes/SM_TrackerBot
+MRUItem19=/Game/Meshes/ArcadeEditorSphereScaled
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
@@ -3727,6 +3737,6 @@ PrimType=1
 
 [SelectionDetails]
 PreserveScaleRatio=True
-DecalSize_PreserveScaleRatio=False
+DecalSize_PreserveScaleRatio=True
 
 
